src/pages/messaging/customer-chat-api/v3.1/rtm-pushes/index.mdx
---
weight: 33
category: "messaging"
subcategory: "customer-chat-api"
title: "RTM pushes"
tagline: "The reference of LiveChat RTM API pushes."
desc: "This document contains a reference of LiveChat RTM API pushes."
apiVersion: "3.1"
---

This document contains a reference of **pushes** available in the **LiveChat Customer Chat API**. Similarly to [webhooks](/management/webhooks), pushes notify you when specific events occur. They're usually generated as result of RTM API actions, but it's also possible to receive them in result of Web API actions.

<Section>
<Text>

## Introduction

Here's what you need to know about **pushes**:

- They are generated primarily by RTM API actions, but also by Web API actions.
- They notify you when specific events occur.
- Can be **delivered** only in the websocket transport.
- You don't need to register pushes to receive them.
- Their equivalents in Web API are [webhooks](/management/configuration-api/v3.1/#webhooks). Pushes and webhooks have similar payloads.
- There are no retries for pushes. To determine if a customer has seen an event, compare the [event's](/messaging/customer-chat-api/v3.1/data-structures/#response) `created_at` parameter with the [customer's](/messaging/customer-chat-api/v3.1/data-structures/#customer) `events_seen_up_to` field.

## Available pushes

|                 |                                                                                                                                                                                                                                                                                                                                                                     |
| --------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Chats**       | [`incoming_chat_thread`](#incoming_chat_thread) [`thread_closed`](#thread_closed)                                                                                                                                                                                                                                                                                   |
| **Chat access** | [`access_set`](#access_set) [`chat_transferred`](#chat_transferred-1)                                                                                                                                                                                                                                                                                               |
| **Chat users**  | [`chat_user_added`](#chat_user_added) [`chat_user_removed`](#chat_user_removed)                                                                                                                                                                                                                                                                                     |
| **Events**      | [`incoming_event`](#incoming_event) [`event_updated`](#event_updated)[`incoming_rich_message_postback`](#incoming_rich_message_postback)                                                                                                                                                                                                                            |
| **Properties**  | [`chat_properties_updated`](#chat_properties_updated) [`chat_properties_deleted`](#chat_properties_deleted) [`chat_thread_properties_updated`](#chat_thread_properties_updated) [`chat_thread_properties_deleted`](#chat_thread_properties_deleted) [`event_properties_updated`](#event_properties_updated) [`event_properties_deleted`](#event_properties_deleted) |
| **Customers**   | [`customer_updated`](#customer_updated) [`customer_page_updated`](#customer_page_updated) [`customer_side_storage_updated`](#customer_side_storage_updated)                                                                                                                                                                                                         |
| **Status**      | [`customer_disconnected`](#customer_disconnected)                                                                                                                                                                                                                                                                                                                   |
| **Other**       | [`incoming_typing_indicator`](#incoming_typing_indicator) [`incoming_multicast`](#incoming_multicast) [`events_marked_as_seen`](#events_marked_as_seen)                                                                                                                                                                                                             |


</Text>

<Code>

<CodeResponse title={'The general push format'}>

```json
{
  "request_id": "<request_id>", // optional, applies only to the requester
  "action": "<action>",
  "type": "push",
  "payload": {
    // optional payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chats

### `incoming_chat_thread`
Informs about a new thread coming in the chat. The push payload contains not only the new thread, but the whole chat data structure. If the chat was started with some initial events, the thread object contains them.  

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat": {
    "id": "PJ0MRSHTDG",
    "order": 343544565,
    "users": [
      // array of "User" objects
    ],
    "properties": {
      // "Properties" object
    },
    "access": {
      // "Access" object
    },
    "thread": {
      // "Thread" object
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                           |
| ---------------------- | ------------------------------------------------------------------------- |
| **Action**             | `incoming_chat_thread`                                                    |
| **Webhook equivalent** | [`incoming_chat_thread`](/management/webhooks/v3.1/#incoming_chat_thread) |

### `thread_closed`
Informs that a thread was closed. 

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c" // optional
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `thread_closed`                                             |
| **Webhook equivalent** | [`thread_closed`](/management/webhooks/v3.1/#thread_closed) |

#### Push payload

| Field     | Notes                                         |
| --------- | --------------------------------------------- |
| `user_id` | Missing if a thread was closed by the router. |

## Chat access

### `access_set`

Informs that new, single access to a resource was set. The existing access is overwritten.

<CodeResponse title={'Sample push payload'}>

```json
{
  "resource": "chat",
  "id": "PJ0MRSHTDG",
  "access": {
    "group_ids": [1]
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                       |
| ---------------------- | ----------------------------------------------------- |
| **Action**             | `access_set`                                          |
| **Webhook equivalent** | [`access_set`](/management/webhooks/v3.1/#access_set) |

#### Push payload

| Field      | Notes         |
| ---------- | ------------- |
| `resource` | Resource type |
| `id`       | Resource id   |

### `chat_transferred`
Informs that a chat was transferred to a different group or to an Agent.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "requester_id": "cb531744-e6a4-4ded-b3eb-b3eb4ded4ded",
  "type": "agent",
  "ids": ["b7eff798-f8df-4364-8059-649c35c9ed0c"]
}
```

</CodeResponse>

#### Specifics

|                        |                    |
| ---------------------- | ------------------ |
| **Action**             | `chat_transferred` |
| **Webhook equivalent** | -                  |

#### Push payload

| Field  | Notes                                  |
| ------ | -------------------------------------- |
| `type` | `agent` or `group`                     |
| `ids`  | An array of the `group` or `agent` IDs |

## Chat users

### `chat_user_added`
Informs that a user (Customer or Agent) was added to a chat.

This push can be emitted with `user.present` set to `false` when a user writes to a chat without joining it. You can achieve that via the [Send Event](/messaging/agent-chat-api/v3.1/#send-event) method. 

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user": {
    // "User > Customer" or "User > Agent" object
  },
  "user_type": "customer"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                 |
| ---------------------- | --------------------------------------------------------------- |
| **Action**             | `chat_user_added`                                               |
| **Webhook equivalent** | [`chat_user_added`](/management/webhooks/v3.1/#chat_user_added) |

#### Push payload

| Field       | Notes                                          |
| ----------- | ---------------------------------------------- |
| `user_type` | Possible values: `agent`, `customer`           |
| `thread_id` | Empty if a user was added to an inactive chat. |

### `chat_user_removed`
Informs that a user (Customer or Agent) was removed from a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "user@example.com",
  "user_type": "customer"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                     |
| ---------------------- | ------------------------------------------------------------------- |
| **Action**             | `chat_user_removed`                                                 |
| **Webhook equivalent** | [`chat_user_removed`](/management/webhooks/v3.1/#chat_user_removed) |

#### Push payload

| Field       | Notes                                              |
| ----------- | -------------------------------------------------- |
| `user_type` | Possible values: `agent`, `customer`               |
| `thread_id` | Empty if a user was removed from an inactive chat. |

## Events

### `incoming_event`
Informs about an incoming [event](/messaging/customer-chat-api/v3.1/data-structures/#events) sent to a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event": {
      "id": "Q20163UAHO_2",
      "created_at": "2019-12-05T07:27:08.820000Z",
      "recipients": "all",
      "type": "message",
      "properties": {
          "0805e283233042b37f460ed8fbf22160": {
              "string_property": {
                "value": "string value"
              }
          }
      },
      "text": "Hello",
      "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `incoming_event`                                              |
| **Webhook equivalent** | [`incoming_event`](/management/webhooks/v3.1/#incoming_event) |

### `event_updated`
Informs that an [event](/messaging/customer-chat-api/v3.1/data-structures/#events) was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "123-123-123-123",
  "thread_id": "E2WDHA8A",
  "event": {
    // "Event" object
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `event_updated`                                             |
| **Webhook equivalent** | [`event_updated`](/management/webhooks/v3.1/#event_updated) |

### `incoming_rich_message_postback`
Informs about an incoming [rich message](/messaging/customer-chat-api/v3.1/data-structures/#rich-message) postback. The push payload contains the info on the postback itself, as well as the chat it was sent in.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f7",
  "postback": {
    "id": "action_yes",
    "toggled": true
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `incoming_rich_message_postback`                                                              |
| **Webhook equivalent** | [`incoming_rich_message_postback`](/management/webhooks/v3.1/#incoming_rich_message_postback) |

## Properties

### `chat_properties_updated`
Informs about those chat properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "properties": {
    "rating": {
      "score": {
        "value": 1
      },
      "comment": {
        "value": "Very good!"
      }
    }
    // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_updated`                                                       |
| **Webhook equivalent** | [`chat_properties_updated`](/management/webhooks/v3.1/#chat_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_properties_deleted`
Informs about those chat properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
	"chat_id": "PJ0MRSHTDG",
	"properties": {
		"rating": ["score", "comment"]
		},
		// ...
	}
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_deleted`                                                       |
| **Webhook equivalent** | [`chat_properties_deleted`](/management/webhooks/v3.1/#chat_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_thread_properties_updated`
Informs about those chat thread properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "properties": {
    "rating": {
      "value": {
        "value": 1
      },
      "comment": {
        "value": "Very good!"
      }
    }
    // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `chat_thread_properties_updated`                                                              |
| **Webhook equivalent** | [`chat_thread_properties_updated`](/management/webhooks/v3.1/#chat_thread_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                       |
| ------------ | ----------------------------------------------------------------------------------------------------------- |
| `properties` | This is not a full `properties` object. This push shows only the properties the have been recently updated. |

### `chat_thread_properties_deleted`
Informs about those chat thread properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
	"chat_id": "PJ0MRSHTDG",
	"thread_id": "K600PKZON8",
	"properties": {
		"rating": ["score", "comment"]
		},
		// ...
	}
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `chat_thread_properties_deleted`                                                              |
| **Webhook equivalent** | [`chat_thread_properties_deleted`](/management/webhooks/v3.1/#chat_thread_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_updated`
Informs about those event properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "2_E2WDHA8A",
  "properties": {
    "rating": {
      "comment": {
        "value": "Very good!"
      }
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `event_properties_updated`                                                        |
| **Webhook equivalent** | [`event_properties_updated`](/management/webhooks/v3.1/#event_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_deleted`
Informs about those event properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
	"chat_id": "PJ0MRSHTDG",
	"thread_id": "K600PKZON8",
	"event_id": "2_E2WDHA8A",
	"properties": {
		"rating": ["score", "comment"]
		},
		// ...
	}
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `event_properties_deleted`                                                        |
| **Webhook equivalent** | [`event_properties_deleted`](/management/webhooks/v3.1/#event_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

## Customers

### `customer_updated`
Informs that Customer's data was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer": {
    // "User > Customer" object
  }
}
```

</CodeResponse>

#### Specifics

|                        |                    |
| ---------------------- | ------------------ |
| **Action**             | `customer_updated` |
| **Webhook equivalent** | -                  |

### `customer_page_updated`
Informs that a Customer changed the website - moved to another page of the website, for example by clicking on a link.

<CodeResponse title={'Sample push payload'}>

```json
{
  "url": "https://livechatinc.com/pricing",
  "title": "pricing",
  "timestamp": 123456789
}
```

</CodeResponse>

#### Specifics

|                        |                         |
| ---------------------- | ----------------------- |
| **Action**             | `customer_page_updated` |
| **Webhook equivalent** | -                       |

### `customer_side_storage_updated`
Informs that a Customer updated the data stored on their side. 

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_side_storage": {
    "customer_visits": "1"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                 |
| ---------------------- | ------------------------------- |
| **Action**             | `customer_side_storage_updated` |
| **Webhook equivalent** | -                               |

#### Push payload

| Field                   | Notes                                                                                                                                              |
| ----------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- |
| `customer_side_storage` | A map in the `key : value` format. Map content should be kept on the client side (e.g. in browsers local storages) and sent via [`login`](#login). |

## Status

### `customer_disconnected`
Informs that a Customer was disconnected. The payload contains the reason of Customer's disconnection.

<CodeResponse title={'Sample push payload'}>

```json
{
  "reason": "misdirected_connection",
  "data": {
    // optional
    "region": "fra"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                         |
| ---------------------- | ----------------------- |
| **Action**             | `customer_disconnected` |
| **Webhook equivalent** | -                       |

#### Push payload

| Field    | Notes |
| -------- | ----- |
| `reason` |       |

## Possible reasons

| Type                                 | Notes                                                                                                                                |
| ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------ |
| `access_token_expired`               | Access token lifetime has elapsed.                                                                                                   |
| `connection_timeout`                 | Has not received [`ping`](#authentication) from the client for some time, or it's been too long since the connection was authorized. |
| `customer_banned`                    | Customer has been banned.                                                                                                            |
| `customer_temporarily_blocked`**\*** | Customer tried reconnecting too many times after the `too_many_connections` error had occurred.                                      |
| `inactivity_timeout`                 | Customer didn't chat or change the page in the past 30 minutes.                                                                      |
| `internal_error`                     | Internal, unexpected error; reconnecting is advised                                                                                  |
| `license_not_found`                  | The license with the specified ID doesn't exist.                                                                                     |
| `license_expired`                    | The license has expired.                                                                                                             |
| `misdirected_connection` **\*\***    | Customer connected to a server in the wrong region.                                                                                  |
| `product_version_changed`            | The product version has changed.                                                                                                     |
| `service_temporarily_unavailable`    | The Customer Chat API should be available again soon; reconnecting is advised                                                        |
| `too_many_connections`               | Customer has reached the maximum number of connections.                                                                              |
| `too_many_unauthorized_connections`  | The maximum number of unauthorized connections has been reached.                                                                     |
| `unsupported_version`                | Connecting to an unsupported version of the Customer Chat API.                                                                       |

**\*)**
The `misdirected_connection` reason can also return the correct region in an optional data object. With this piece of information, client is able to figure out where it should be connected.

**\*\*)**
The `customer_temporarily_blocked` reason can also return the correct timeout in an optional data object. With this piece of information, client is able to figure out how much time a customer should wait before attempting to reconnect again.

## Other

### `incoming_typing_indicator`
Informs that one of the chat users is currently typing a message. The message hasn't been sent yet. The push payload contains the typing indicator object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "typing_indicator": {   
    "author_id": "d17cd570-11a9-45c0-45c0-1b020b7586dc",
    "recipients": "all",
    "timestamp": 1574245378,
    "is_typing": true
  }
}
```

</CodeResponse>

#### Specifics

|                        |                             |
| ---------------------- | --------------------------- |
| **Action**             | `incoming_typing_indicator` |
| **Webhook equivalent** | -                           |

### `incoming_multicast`
Informs about messages sent via the `multicast` method or by the system. 

<CodeResponse title={'Sample push payload'}>

```json
{
  "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "content": {
    "example": {
      "nested": "json"
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                      |
| ---------------------- | -------------------- |
| **Action**             | `incoming_multicast` |
| **Webhook equivalent** | -                    |

#### Push payload

| Field       | Required | Notes                                                                                            |
| ----------- | -------- | ------------------------------------------------------------------------------------------------ |
| `author_id` | No       | Present only if the push was generated by the **Multicast** method and not sent from the server. |
| `content`   | Yes      |                                                                                                  |

### `events_marked_as_seen`
Informs that a user has seen events up to a specific time.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "seen_up_to": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                             |
| ---------------------- | --------------------------------------------------------------------------- |
| **Action**             | `events_marked_as_seen`                                                     |
| **Webhook equivalent** | [`events_marked_as_seen`](/management/webhooks/v3.1/#events_marked_as_seen) |
